# ag

./: CMakeLists.txt  hello.c  hello.h
learnc/: arraycase.c  ctype.c  ctype.h  enumcase.c  forcase.c  hello.c  hello.h  main.c  operatorcase.c  pointercase.c  switchcase.c
learnc2/: hello.c
