cmake_minimum_required(VERSION 3.13)
project(test C)

set(CMAKE_C_STANDARD 11)

add_executable(hello learnc/hello.c)
add_executable(ctype learnc/ctype.c)
add_executable(main learnc/main.c learnc/support.c)
add_executable(operatorcase learnc/operatorcase.c)
add_executable(switchcase learnc/switchcase.c)
add_executable(forcase learnc/forcase.c)
add_executable(arraycase learnc/arraycase.c)
add_executable(enumcase learnc/enumcase.c)
add_executable(pointercase learnc/pointercase.c)
add_executable(hello2 learnc2/hello.c)